# tech-challenge-02

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml
.dvc/: config
configs/: model.yaml
notebooks/: 01_eda.ipynb  02_neural_mlp.ipynb
reports/: decision_tree_metrics.json  feature_engineering_winner.json  lightgbm_metrics.json  logreg_metrics.json  metrics.json  mlp_metrics.json  xgboost_metrics.json
scripts/: validate_env.py
scripts/experiments/: run_fe_comparison.py
scripts/pipeline/: _common.py  feature_eng.py  preprocess.py  promote_best_model.py  promote_feature_set.py  run_heavy_exploration.py  train_baseline.py  train_decision_tree.py  train_lightgbm.py  train_neural_mlp.py  train_xgboost.py  tune_neural_mlp.py  tune_tabular_models.py
src/recsys_ecommerce/: __init__.py  config.py
src/recsys_ecommerce/evaluation/: metrics.py  plots.py
src/recsys_ecommerce/features/: __init__.py  basic.py  category.py  covisitation.py  pipeline.py
src/recsys_ecommerce/models/: base.py  decision_tree_model.py  factory.py  lightgbm_model.py  neural_mlp.py  sklearn_baseline.py  tabular_classifier.py  xgboost_model.py
src/recsys_ecommerce/preprocessing/: base.py  interaction.py
src/recsys_ecommerce/tracking/: __init__.py  mlflow_organization.py
tests/: test_design_patterns.py  test_interaction.py  test_mlflow_organization.py  test_neural_mlp.py
